force-app/main/default/objects/SIOC__CompanyInfo__c/SIOC__CompanyInfo__c.object-meta.xml
<CustomObject>
    <description>Used to store company information obtained from third party vendors.</description>
    <label>Company Information</label>
    <nameField>
        <label>Company Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>