force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__Account__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Company Information</relationshipLabel>
    <relationshipName>CompanyInfo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>