force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__Address1Line2__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Address1Line2__c</fullName>
    <label>Address 1 Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>