force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__Address1Type__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Address1Type__c</fullName>
    <label>Address 1 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>