force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__Address2Country__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Address2Country__c</fullName>
    <label>Address 2 Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>