force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__CompanyId__c.field-meta.xml
<CustomField>
    <fullName>SIOC__CompanyId__c</fullName>
    <description>Official company Id.</description>
    <externalId>true</externalId>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>