force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__EndDate__c.field-meta.xml
<CustomField>
    <fullName>SIOC__EndDate__c</fullName>
    <description>Date a company was closed. E.g. Date of Cessation.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>