force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__FullCompanyName__c.field-meta.xml
<CustomField>
    <fullName>SIOC__FullCompanyName__c</fullName>
    <description>Full non-truncated company name.</description>
    <label>Full Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>