force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__LastAccountsPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>SIOC__LastAccountsPeriodStart__c</fullName>
    <description>The first day of the most recently filed accounting period</description>
    <label>Last Accounts Period Start On</label>
    <type>Date</type>
</CustomField>