force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__LastAccountsTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>SIOC__LastAccountsTypeDesc__c</fullName>
    <description>The type of the last company accounts filed.</description>
    <label>Last Accounts Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>