force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__nCinoProcessingVersion__c.field-meta.xml
<CustomField>
    <fullName>SIOC__nCinoProcessingVersion__c</fullName>
    <label>nCino Processing Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>