force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__NextAccountsDue__c.field-meta.xml
<CustomField>
    <fullName>SIOC__NextAccountsDue__c</fullName>
    <description>The date the next company accounts are due.</description>
    <label>Next Accounts Due On</label>
    <type>Date</type>
</CustomField>