force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__NextAccountsOverDue__c.field-meta.xml
<CustomField>
    <fullName>SIOC__NextAccountsOverDue__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag indicating if the company accounts are overdue.</description>
    <label>Next Accounts Overdue</label>
    <type>Checkbox</type>
</CustomField>