force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__NextAccountsPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>SIOC__NextAccountsPeriodEnd__c</fullName>
    <description>The last day of the next accounting period to be filed.</description>
    <label>Next Accounts Period End On</label>
    <type>Date</type>
</CustomField>