force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__NextAccountsPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>SIOC__NextAccountsPeriodStart__c</fullName>
    <description>The first day of the next accounting period to be filed.</description>
    <label>Next Accounts Period Start On</label>
    <type>Date</type>
</CustomField>