force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__OfficialStatus__c.field-meta.xml
<CustomField>
    <fullName>SIOC__OfficialStatus__c</fullName>
    <description>User friendly status.</description>
    <label>Official Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>