force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__Phone__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Phone__c</fullName>
    <label>Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>