force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__SimpleStatus__c.field-meta.xml
<CustomField>
    <fullName>SIOC__SimpleStatus__c</fullName>
    <description>Raw status from the vendor.</description>
    <label>Simple Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>