force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__Type__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Type__c</fullName>
    <description>Raw type from the vendor.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>