force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__TypeDesc__c.field-meta.xml
<CustomField>
    <fullName>SIOC__TypeDesc__c</fullName>
    <description>User friendly type.</description>
    <label>Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>