force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__UniqueHash__c.field-meta.xml
<CustomField>
    <fullName>SIOC__UniqueHash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Hash of Vendor:CompanyId</description>
    <externalId>true</externalId>
    <label>Unique Hash</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>