force-app/main/default/objects/SIOC__CompanyInfo__c/fields/SIOC__VendorId__c.field-meta.xml
<CustomField>
    <fullName>SIOC__VendorId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Id provided by the third party vendor.</description>
    <externalId>true</externalId>
    <label>Vendor ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>